fixed hover effects

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </div>
                     </div>
                     <div class="next__arrow">
-                        <a href=""><img src="./img/rightarrow.svg" alt="nextitemarrow" class="next__arrow__right"></a>
+                        <a href="#"><img src="./img/rightarrow.svg" alt="nextitemarrow" class="next__arrow__right"></a>
                     </div>
                 </div>
             </section>
